navbar responsiveness solve except it is align

--- a/index.css
+++ b/index.css
@@ -67,36 +67,30 @@
   }
 
 @media (max-width: 768px){
-    .navbar-nav {
-      width: 50%;
-      display: inline-block;
-      text-align: center;
-      background-color: #f8f9fa;
-    }
     .nav-item{
         display: block;
-        width: 100%;
-    text-align: center;
-    background-color: green;
+        width: 50%;
+        text-align: left;
         margin: 0 auto;
+        padding: 10px;
       }
-      .nav-link{
-        width: 100%;
-        pading: 100px;
-        display: block;
-        background-color: green;
-      }
-      .register-btn{
-        width: 75%;
-        margin-left: 12.5%;
-        margin-top: 10px;
-        display: block;
-        background-color: green;
-      }
+        .login-btn{
+            width: 80%;
+            text-align: center;
+            margin-left: 10%;
+            margin-top: 10px;
+            display: block;
+        }
+        .register-btn{
+            width: 80%;
+            margin-left: 10%;
+            margin-top: 10px;
+            display: block;
+            text-align: center;
+        }
       .dropdown-menu{
         width: 100%;
         display: block;
-        background-color: green;
       }
     }
 }
